padding and spelling align fix

--- a/4. Wrench_site/css/styles.css
+++ b/4. Wrench_site/css/styles.css
@@ -14,6 +14,8 @@ main{
 	margin: 0px auto 0px auto;
 	max-width:1200px;
 	left-padding: 20px:
+	right-padding:20px;
+	min-width: 300px;
 }
 
 
@@ -200,7 +202,7 @@ p{
 }
 /**footer**/
 footer{
-	text-aling:center;
+	text-align:center;
 
 }
 footer dt{
